# cargo-ci-cache-clean

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml  deploy.yml  release.yml
src/: main.rs
