[package]
name = "cargo-ci-cache-clean"
version = "0.0.3"
description = "Clean up unnecessary Cargo artifacts to improve CI caching performance"
authors = ["Rob Ede <robjtede@icloud.com>"]
keywords = ["ci", "cache", "clean", "cargo"]
repository = "https://github.com/x52dev/cargo-ci-cache-clean"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
home = "0.5"
tracing = { version = "0.1.30", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
